Fix CORS and auth fallback for GitHub Pages deployment